# rustml

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: validate_scipy.py  validation_data.json
crates/rustml-scipy/: Cargo.toml
crates/rustml-scipy/src/: lib.rs  linalg.rs  optimize.rs  stats.rs
