[package]
name = "rustml-scipy"
description = "Scientific computing in Rust — stats, linalg, optimize (scipy equivalent)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
